[package]
name = "rho-inference"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes = "1"
clap.workspace = true
dirs.workspace = true
futures.workspace = true
futures-util.workspace = true
fnv.workspace = true
rand.workspace = true
rho-core.workspace = true
senax-encoder.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
ureq.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
