[package]
edition.workspace = true
license.workspace = true
name = "rho-profiling"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
pprof = { version = "0.15", default-features = false }

[dev-dependencies]
tempfile.workspace = true
