[package]
edition.workspace = true
license.workspace = true
name = "rho-profiling"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
backtrace = "0.3"
libc.workspace = true
pprof.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
