[package]
edition.workspace = true
license.workspace = true
name = "rho-profiling"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
dial9-tokio-telemetry = { version = "0.3.14", features = ["cpu-profiling"] }
dial9-trace-format = "0.4.1"
flate2 = "1"
libc.workspace = true


[dev-dependencies]
tempfile.workspace = true
