[package]
edition.workspace = true
license.workspace = true
name = "rho-shell"
publish = false
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
brush-builtins.workspace = true
brush-core.workspace = true
libc.workspace = true
rand.workspace = true
rho-shell-proto.workspace = true
rustix-openpty.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
