[package]
name = "rho-slack"
description = "In-process Slack integration: Socket Mode receive, Web API send, RAM-only token storage"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
camino.workspace = true
futures-util.workspace = true
libc.workspace = true
reqwest.workspace = true
redb.workspace = true
rustls.workspace = true
rho-agent.workspace = true
rho-core.workspace = true
rho-db.workspace = true
senax-encoder.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
