[package]
name = "rho-store-redb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
postcard.workspace = true
redb.workspace = true
rho-core.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
