[package]
name = "rho-term-screen"
version.workspace = true
edition.workspace = true
description = "Terminal screen and styled text primitives for rho."
repository.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
crossterm.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
vt100.workspace = true
