[package]
name = "rho-tool-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
rho-core.workspace = true
rho-workspaces.workspace = true
rustix = { version = "1", features = ["process", "thread"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
rho-db.workspace = true
tempfile.workspace = true
