[package]
edition.workspace = true
license.workspace = true
name = "rho-ui-proto"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
rho-workspaces.workspace = true
anyhow.workspace = true
futures.workspace = true
async-stream.workspace = true
bytes.workspace = true
rho-agent.workspace = true
rho-core.workspace = true
senax-encoder.workspace = true
tokio.workspace = true
