[package]
name = "rho-workspaces"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
anyhow.workspace = true
bytes = "1"
prefix-id = { path = "../prefix-id" }
rustix = { version = "1", features = ["fs", "mount", "process", "thread"] }
senax-encoder.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
