[package]
name = "rho-workspaces"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1"
camino.workspace = true
dirs.workspace = true
libc.workspace = true
prefix-id = { workspace = true, features = ["redb"] }
rho-context-config.workspace = true
rustix = { version = "1", features = ["fs", "mount", "process", "thread"] }
senax-encoder.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
